--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.0",
     "redux": "^4.2.1",
-    "sass": "^1.49.8",
+    "sass": "^1.59.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
