--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@redux-devtools/extension": "^3.2.5",
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +15,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.0",
     "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "sass": "^1.59.2",
     "web-vitals": "^2.1.4"
   },
