--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "rsuite": "^5.28.2",
     "sass": "^1.59.2",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4"
