--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "qrcode.react": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.8.0",
@@ -24,10 +25,12 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.0",
+    "react-share": "^4.4.1",
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "sass": "^1.59.2",
+    "share": "^0.7.40",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4"
   },
