--- a/package.json
+++ b/package.json
@@ -1,61 +1,76 @@
 {
-  "name": "city-view-react",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@fontsource/roboto": "^4.5.8",
-    "@material-ui/core": "^4.12.4",
-    "@mui/icons-material": "^5.11.11",
-    "@mui/material": "^5.11.13",
-    "@mui/styled-engine-sc": "^5.11.11",
-    "@mui/styles": "^5.11.13",
-    "@redux-devtools/extension": "^3.2.5",
-    "@reduxjs/toolkit": "^1.9.3",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.27.2",
-    "qrcode.react": "^3.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.8.0",
-    "react-redux": "^8.0.5",
-    "react-responsive": "^9.0.2",
-    "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.0",
-    "react-share": "^4.4.1",
-    "react-transition-group": "^4.4.5",
-    "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2",
-    "sass": "^1.59.2",
-    "share": "^0.7.40",
-    "styled-components": "^5.3.9",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+   "name": "city-view-react",
+   "version": "0.1.0",
+   "private": true,
+   "dependencies": {
+      "@emotion/react": "^11.10.6",
+      "@emotion/styled": "^11.10.6",
+      "@fontsource/roboto": "^4.5.8",
+      "@material-ui/core": "^4.12.4",
+      "@mui/icons-material": "^5.11.11",
+      "@mui/material": "^5.11.13",
+      "@mui/styled-engine-sc": "^5.11.11",
+      "@mui/styles": "^5.11.13",
+      "@redux-devtools/extension": "^3.2.5",
+      "@reduxjs/toolkit": "^1.9.3",
+      "@testing-library/jest-dom": "^5.16.2",
+      "@testing-library/react": "^12.1.3",
+      "@testing-library/user-event": "^13.5.0",
+      "@types/bcryptjs": "^2.4.2",
+      "@types/body-parser": "^1.19.2",
+      "@types/cors": "^2.8.13",
+      "@types/helmet": "^4.0.0",
+      "@types/jsonwebtoken": "^9.0.2",
+      "axios": "^0.27.2",
+      "mysql": "^2.14.1",
+      "qrcode.react": "^3.1.0",
+      "react": "^17.0.2",
+      "react-dom": "^17.0.2",
+      "react-icons": "^4.8.0",
+      "react-redux": "^8.0.5",
+      "react-responsive": "^9.0.2",
+      "react-router-dom": "^6.9.0",
+      "react-scripts": "5.0.0",
+      "react-share": "^4.4.1",
+      "react-transition-group": "^4.4.5",
+      "redux": "^4.2.1",
+      "redux-thunk": "^2.4.2",
+      "reflect-metadata": "^0.1.13",
+      "sass": "^1.59.2",
+      "share": "^0.7.40",
+      "styled-components": "^5.3.9",
+      "ts-node-dev": "^2.0.0",
+      "typeorm": "0.2.45",
+      "web-vitals": "^2.1.4"
+   },
+   "scripts": {
+      "start": "ts-node src/index.ts",
+      "build": "react-scripts build",
+      "test": "react-scripts test",
+      "eject": "react-scripts eject",
+      "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
+   },
+   "eslintConfig": {
+      "extends": [
+         "react-app",
+         "react-app/jest"
+      ]
+   },
+   "browserslist": {
+      "production": [
+         ">0.2%",
+         "not dead",
+         "not op_mini all"
+      ],
+      "development": [
+         "last 1 chrome version",
+         "last 1 firefox version",
+         "last 1 safari version"
+      ]
+   },
+   "devDependencies": {
+      "@types/node": "^16.11.10",
+      "ts-node": "10.4.0",
+      "typescript": "4.5.2"
+   }
 }
