--- a/nodeServer/package.json
+++ b/nodeServer/package.json
@@ -4,15 +4,16 @@
   "description": "Awesome project developed with TypeORM.",
   "type": "commonjs",
   "devDependencies": {
-    "@types/node": "^16.11.10",
-    "ts-node": "10.4.0",
-    "typescript": "4.5.2",
-    "ts-node-dev": "^2.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.13",
     "@types/helmet": "^4.0.0",
-    "@types/jsonwebtoken": "^9.0.2"
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^16.11.10",
+    "node-dev": "^8.0.0",
+    "ts-node": "10.4.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "4.5.2"
   },
   "dependencies": {
     "body-parser": "^1.19.1",
