--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
       "web-vitals": "^2.1.4"
    },
    "scripts": {
-      "start": "ts-node src/index.ts",
+      "start": "set debug=* && ts-node-dev --respawn --transpile-only ./src/index.ts",
       "build": "react-scripts build",
       "test": "react-scripts test",
       "eject": "react-scripts eject",
