--- a/nodeServer/package.json
+++ b/nodeServer/package.json
@@ -7,6 +7,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/helmet": "^4.0.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^16.11.10",
@@ -16,7 +17,10 @@
     "typescript": "4.5.2"
   },
   "dependencies": {
+    "@types/validator": "^13.7.17",
     "body-parser": "^1.19.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "express": "^4.17.2",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
@@ -24,6 +28,14 @@
   },
   "scripts": {
     "start": "ts-node src/index.ts",
-    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "[__for TypeORM migration": "",
+    "migration:create": "ts-node ./node_modules/typeorm/cli.js migration:create",
+    "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run",
+    "migration:revert": "ts-node ./node_modules/typeorm/cli.js migration:revert",
+    "schema:drop": "ts-node ./node_modules/typeorm/cli.js schema:drop",
+    "schema:sync": "ts-node ./node_modules/typeorm/cli.js schema:sync",
+    "migration:show": "ts-node ./node_modules/typeorm/cli.js migration:show",
+    "]__for TypeORM migration": ""
   }
 }
