--- a/nodeServer/package.json
+++ b/nodeServer/package.json
@@ -18,10 +18,14 @@
   },
   "dependencies": {
     "@types/validator": "^13.7.17",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.0",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
     "typeorm": "0.2.45"
